Fix overflow issue

--- a/frontend/src/components/CashierView/CashierView.css
+++ b/frontend/src/components/CashierView/CashierView.css
@@ -67,7 +67,7 @@
     padding: 10px;
     width: 25vw;
     border-bottom: 2px solid black;
-    height: 100vh;
+    /* height: 100%; */
 }
 
 /**
